--- a/main.tex
+++ b/main.tex
@@ -675,14 +675,14 @@ dimension n = 30, the natural extension of the above :
 \begin{equation}
 T^{2} = L^{3} = M^{5} = n^{30}
 \end{equation}
-where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This is called the Holic Principle, relates to the apparent world. The Complete Holic
-Principle involves a term $F^{7}$, and so introduces the dimension $30 x 7 = 210$. It is confirmed by (to 0.03\%):
+where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This is called the Holic Principle, relating to the apparent world. The Complete Holic
+Principle involves a field term $F^{7}$, and so introduces the dimension $30 \times 7 = 210$. It is confirmed by (to 0.03\%):
 \begin{equation}
-R/\lambdabar_e \approx (2/\delta)^210
+R/\lambdabar_e \approx (2/\delta)^{210}
 \end{equation}
 confirming the central role of $\delta = R^{\prime}/R = pH/a^3$, which is to 1.6 ppm:
 \begin{equation}
-\delta /\approx e^{2/e^2} 
+\delta \approx e^{2/e^2} 
 \end{equation}
 confirming the central role of e.
 
