--- a/main.tex
+++ b/main.tex
@@ -656,15 +656,13 @@ compatible with measurement $a \approx 137.035999139(31)$ in:
 \begin{equation}
 ln137/ln(a/137) \approx (2+135/d_{e})^{2}
 \end{equation}
-meaning the ratio a/137 acts as a canonical ratio. Moreover, it is very close (3 ppb) to $3^{a/F}$, where the Tifft factor $F/a$ appears again, proving that the base 3, the optimal whole number basis is also used by the Cosmos.
+meaning the ratio $a/137$ acts as a canonical ratio. Moreover, it is very close (3 ppb) to $3^{a/F}$, where the Tifft factor $F/a$ appears again, proving that the base 3, the optimal whole number basis is also used by the Cosmos.
 
 \subsection{The Arithmetical Logic : Holic Principle}
 
 In the hypothesis of an Arithmetic Cosmos, the ultimate equations must be diophantine. The
 simplest one is $T^{2} = L^{3}$ , where $T$ is a time ratio and $L$ a length one, resolved, since 2 and 3 are co-
-prime, by $T^{2} = L^{3} = n^{6}$ , meaning the classical 6D space of classical point mechanics. This particularizes
-the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent
-study [18].
+prime, by $T^{2} = L^{3} = N^{6}$, where N is a whole number, meaning the classical 6D space of classical point mechanics. Considering the exponents, this particularizes the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent study [18].
 
 This is the degenerate arithmetic form of the spatio-temporal holographic principle.
 
@@ -673,7 +671,7 @@ Gravitational Molecule model, where the visible Universe corresponds to the firs
 suggesting the existence of a Grandcosmos, as the Topological Axis does also, which favors the
 dimension n = 30, the natural extension of the above :
 \begin{equation}
-T^{2} = L^{3} = M^{5} = n^{30}
+T^{2} = L^{3} = M^{5} = N^{30}
 \end{equation}
 where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This is called the Holic Principle, relating to the apparent world. The Complete Holic
 Principle involves a field term $F^{7}$, and so introduces the dimension $30 \times 7 = 210$. It is confirmed by (to 0.03\%):
@@ -690,23 +688,39 @@ confirming the central role of e.
 \subsection{The Conservation of Information}
 
 The Grandcosmos holographic reduction radius $R\prime$ shows itself an overwhelming holographic
-relation with the CMB Wien wavelength $l_{CMB}$ , to $0.01\%$:
-$$4\pi(R\prime/l_{CMB})^{2} \approx e^{a}$$
+relation with the CMB Wien wavelength $l_{CMB}$, to $0.01\%$:
+\begin{equation}
+4\pi(R^{\prime}/l_{CMB})^{2} \approx e^{a}
+\end{equation}
 Since the holographic technique uses coherent radiation, this seems incompatible with the CMB
-thermal character. But in a totally deterministic cosmos, there is no paradox. This question is
+thermal character. But \textit{in a totally deterministic cosmos, there is no paradox}. This question is
 connected with the black hole information paradigm [20]. Independently of our approach, an
-argument in favor of a total retention of information was tied to a non-evolution cosmology
-[21], Moreover, we have shown that formalisms of Holography and Unitary Matrix Quantum
-Physics are very similar [3]. One notice that $e^{a}$ is also compatible with the half volume of the proton, with
+argument in favor of a total conservation of information was tied to a non-evolution cosmology
+[21], Moreover, we have shown that the formalisms of Holography and Unitary Matrix Quantum
+Physics are very similar [3]. 
+
+One notices that $e^{a}$ is also compatible with the half volume of the proton, with
 the Planck length as unit.
+
 So, while General Relativity and Unitary Quantum physics disagree about the nature of Space-
 Time, specially the non-locality phenomena, they agree for complete determinism, leading to the collapse of the
 Copenhagen statistical interpretation. The hidden variables exist really: the Cosmos ! Heisenberg
 relations would be only Fourier transform manifestations of Wave Mechanics.
 
+
+\subsection{Atiyah and sternheimer constants}
+    Sir Michael Atiyah was a precurseur in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $\Gamma = gamma a /\pi$, as a simplification term [22]. Indeed $\Gamma$ and the canonical $e^{\pi} enter the following dramatic simplification of the above (Section 2.3.1) single-electron cosmical formula (0.3 ppm):
 \begin{equation}
-a = (p/H)((ln(R_1/\lambdabar_e) + \gamma – 1)/(\pi^2/6 - 1)) \approx ln(R/\lambdabar e) + G + e^{\pi}
+a = (H/p)((ln(R_1/\lambdabar_e) + \gamma – 1)/(\pi^2/6 - 1)) \approx ln(R/\lambdabar e) + \Gamma + e^{\pi}
 \end{equation}
+so confirming the $R$ value to 45 ppm, a correction which is $\beta p/p_0$, within 0.2\%.
+
+Moreover, this confirms the central role of the Sternheimer scale factor $j = 8\pi^2/ln2$ (to 0.013 \% and 0.046 \%):
+\begin{equation}
+j \approx a - e^{\pi} \approx e^{\pi} lna
+\end{equation}
+It was noted [3] that $j\approx T_mam/T_CMB$, the ratio between mammal and cosmic teperatures, and that $sqrt{Rl_P}$ is close (1\%) to the mammal wavelength $hc/kT_mam$. So, \textit{the couple temal photon-Life is at the upper center of the Topological Axis}, while the down center is  the Higgs boson (Fig.1). The real center, as seen above, is the dimension n = 16. Moreover,$sqrt{R^{\prime}l_P}$ is close (0.1\%) to the water triple point, which is also the product of triple points of Hydrogen and Oxygen, divided by the cosmic temperature. This shows that Chemistry is also involved.
+
 
 \subsection{Ubiquity of $a^{a}$}
 
