--- a/main.tex
+++ b/main.tex
@@ -709,7 +709,8 @@ relations would be only Fourier transform manifestations of Wave Mechanics.
 
 
 \subsection{Atiyah and sternheimer constants}
-    Sir Michael Atiyah was a precurseur in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $\Gamma = gamma a /\pi$, as a simplification term [22]. Indeed $\Gamma$ and the canonical $e^{\pi} enter the following dramatic simplification of the above (Section 2.3.1) single-electron cosmical formula (0.3 ppm):
+    Sir Michael Atiyah was a precurseur in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $\Gamma = gamma a /\pi$, as a simplification term [22]. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 2.3.1) single-electron cosmical formula (0.3 ppm):
+    
 \begin{equation}
 a = (H/p)((ln(R_1/\lambdabar_e) + \gamma – 1)/(\pi^2/6 - 1)) \approx ln(R/\lambdabar e) + \Gamma + e^{\pi}
 \end{equation}
