--- a/main.tex
+++ b/main.tex
@@ -725,6 +725,10 @@ It was noted [3] that $j\approx T_mam/T_CMB$, the ratio between mammal and cosmi
 
 \subsection{Ubiquity of $a^{a}$}
 
+From the Compitation Hypothesis, $a$ must be an optimal basis. Now, as seen above 137 is a number of parameters, so can be interpreted as a dimension, so, according to the Holic Principle , it must be also a privilegied exponent. So the term cmust be central.
+    
+Indeed, $a^a$ is, apart a $\pi$ factor, the Grandcosmos volume with unit length the Hydrogen radius. Moreover, the dramatic relation $a^a\approx e^{p/e}$ has been connected with the fifth optimal musical scale and to the operational definition of e [3]. Now, it is here looked for its manifestations in classical mathematics. 
+
 The famous Lucas-Lehmer primality test uses the series of whole numbers $N_{n+1} = N_{n}^{2}-2$,
 starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging to the Diophantine generators $u_{n} = \sqrt{n} + \sqrt{(n+1)}$., whose entire powers are close to whole numbers. One shows that $N_{n} \approx u_{3}^{(2^{q})}$, and for q = 9:
 \begin{equation}
