--- a/main.tex
+++ b/main.tex
@@ -734,12 +734,29 @@ starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging
 \begin{equation}
 u_{3}^{2^9} \approx (2(a^{2} + 2\sqrt{\mu}))^{64} \approx a^{a}
 \end{equation}
-defining a to 39 ppm, where $\mu$ is the mass ratio muon/electron and the main term $2a^{2} = m_{e} c^{2}/E_{Ryd}$ is
+defining a to 39 ppm, where $\mu$ is the mass ratio muon/electron 
+
+Also, with the Pell-Fermat generator $u_{1} = 1 + \sqrt{2}$:
+$a^{a} \approx u 1^(3\times(2^{8}-1))$
+defining a to 0.3 ppm. So the number a establishes a connexion between $u_{1}$ and $u_{3}$ , two of the
+simplest arithmetics generators. Moreover a has been connected [3] to the canonical $e^{1/e}$ and the
+5th optimal musical scale with 306 notes. This opens a new research in pure mathematics.
+
+
+\subsection{The sporadic Groups}
+
+The above main term $2a^{2} = m_{e} c^{2}/E_{Ryd}$ is
 tied to the Rydbergh energy's principal value $E_{Ryd}$ whose ratio with the Planck energy is closely
 related to the Monster group cardinal order, to 1.5 ppm:
+
 \begin{equation}
 O_{M} e^{-1/2a} \approx (E_{P} /E_{Ryd})^{2} = \frac{\hbar Gc^{5}}{E_{Ryd}^{2}}
 \end{equation}
+
+Moreover the above term appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm:
+
+$$e^{137e}\approx (e/3)e^{ea}\approx O_M^3 \approx 496^{60} \approx fe^{16e^\pi} \approx f^{4d137/\pi}$$
+
 Indeed, by respect to the Chronon $\lambdabar_M /c \approx t_{\Theta} = 1.1333 \times 10{-104} s$, the number ot quantum events in
 the above Supercycle period $T/ t_{\Theta}$ shows, with $\delta = R\prime/R$, to 0.4\%, 2\% and 0.6\%:
 $$\delta \times T/t_{\Theta} \approx (e^{e})^{137} \approx O_{M}^{3} \approx 496^{60}$$
@@ -749,11 +766,8 @@ one a, the Fermi ratio $F =\sqrt{a_{w}}$ and the Bizouard strong ratio $f \appro
 $$F/af \approx 496$$
 Also, to 8 ppm: $lnO_{M} /2lnlnlnlnO_{M} \approx 137$, and the product of the 20 groups of the happy family tied
 to the Monster shows, to 0.015\%:
-$\Pi_{happy} \approx \delta \times a^{a}$. Also, with the Pell-Fermat generator $u_{1} = 1 + \sqrt{2}$:
-$a^{a} \approx u 1^(3\times(2^{8}-1))$
-defining a to 0.3 ppm. So the number a establishes a connexion between $u_{1}$ and $u_{3}$ , two of the
-simplest arithmetics generators. Moreover a has been connected [3] to the canonical $e^{1/e}$ and the
-5th optimal musical scale with 306 notes. This opens a new research in pure mathematics.
+$\Pi_{happy} \approx \delta \times a^{a}$. 
+
 
 \section{Fine-tuning with basic mathematical constants}
 \markright{Your Full Names.  Short Title of Your Paper}
