--- a/main.tex
+++ b/main.tex
@@ -619,7 +619,7 @@ confirms the above Planck's wall breakdown.
 
 \section{Intermediate Mathematical Constants}
 \markright{Your Full Names.  Short Title of Your Paper}
-\subsection{The Singular Prime 137}
+\subsection{The eddington's constant 137}
 
 The initial Eddington's proposal for $a$ was the whole number 136, as the number of idependent parameters in the matrix 16 x 16. Note that \textit{n = 16 is the central dimension of the Topological Axis}. Later, one unity was added, becoming 137, a number which intrigued many physicists for a century, but apparently nobody highlighted it has a fundamental mathematical property: it appears as a Singular Prime in the series of the maximal primes appearing in the numerator of the harmonic
 series: 3,11,5,137,7,11, showing a symmetry between the 11 supergravity dimensions and the 4 of
@@ -708,7 +708,7 @@ Copenhagen statistical interpretation. The hidden variables exist really: the Co
 relations would be only Fourier transform manifestations of Wave Mechanics.
 
 
-\subsection{Atiyah and sternheimer constants}
+\subsection{Atiyah and Sternheimer constants}
     Sir Michael Atiyah was a precurseur in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $\Gamma = gamma a /\pi$, as a simplification term [22]. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 2.3.1) single-electron cosmical formula (0.3 ppm):
     
 \begin{equation}
@@ -757,17 +757,22 @@ Moreover the above term appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm:
 
 $$e^{137e}\approx (e/3)e^{ea}\approx O_M^3 \approx 496^{60} \approx fe^{16e^\pi} \approx f^{4d137/\pi}$$
 
-Indeed, by respect to the Chronon $\lambdabar_M /c \approx t_{\Theta} = 1.1333 \times 10{-104} s$, the number ot quantum events in
-the above Supercycle period $T/ t_{\Theta}$ shows, with $\delta = R\prime/R$, to 0.4\%, 2\% and 0.6\%:
-$$\delta \times T/t_{\Theta} \approx (e^{e})^{137} \approx O_{M}^{3} \approx 496^{60}$$
-implying a liaison between $O_{M}$ , 137 and the famous String dimension 496, tied to the Higgs Boson
-(see Fig.1). One is struck by the following combination of the three dimensionless parameters, the electrical
-one a, the Fermi ratio $F =\sqrt{a_{w}}$ and the Bizouard strong ratio $f \approx 8.4345$:
-$$F/af \approx 496$$
-Also, to 8 ppm: $lnO_{M} /2lnlnlnlnO_{M} \approx 137$, and the product of the 20 groups of the happy family tied
-to the Monster shows, to 0.015\%:
-$\Pi_{happy} \approx \delta \times a^{a}$. 
+implying the Green-Schwarz string dimension 496, which is the third perfect number, after 6 and 28, and tied to the Higgs boson in the Topological Axis (Fig.1). The Bizouard constant, precizing the inverse of the standard 'strong coupling constant 0.1184(7), $f = a_w/2\pi(pH)^{3/2} \approx 8.43450$ appars as a computation basis, and the above relation implies, to 6+1 ppm:
+\begin{equation}
+lnf\approx \pi e/4d_e
+\end{equation}
 
+One is struck by the following combination of the three dimensionless parameters, the electrical
+one $a$, the Fermi ratio $F =\sqrt{a_{w}}$ and the Bizouard strong ratio $f \approx 8.4345$:
+\begin{equation}
+F/af \approx 496\approx j^{\delta}
+\end{equation}
+
+
+Also, to 8 ppm: $lnO_{M} /2lnlnlnlnO_{M} \approx 137$, and the product of the 20 groups of the happy family tied
+to the Monster shows, to 0.015\%, 1\% and 0.9 \%:
+
+$$\Pi_{happy} \approx \delta \times a^{a} \approx j^{j^{\pi/3}} \approx (j/496)^2 \Gamma^{210}$$. 
 
 \section{Fine-tuning with basic mathematical constants}
 \markright{Your Full Names.  Short Title of Your Paper}
