--- a/main.tex
+++ b/main.tex
@@ -709,8 +709,7 @@ relations would be only Fourier transform manifestations of Wave Mechanics.
 
 
 \subsection{Atiyah and Sternheimer constants}
-    Sir Michael Atiyah was a precurseur in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $\Gamma = gamma a /\pi$, as a simplification term [22]. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 2.3.1) single-electron cosmical formula (0.3 ppm):
-    
+    Sir Michael Atiyah was a precurseur in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $\Gamma = gamma a /\pi$, as a simplification term [22]. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 2.3.1) single-electron cosmical formula (0.3 ppm):    
 \begin{equation}
 a = (H/p)((ln(R_1/\lambdabar_e) + \gamma – 1)/(\pi^2/6 - 1)) \approx ln(R/\lambdabar e) + \Gamma + e^{\pi}
 \end{equation}
@@ -742,7 +741,6 @@ defining a to 0.3 ppm. So the number a establishes a connexion between $u_{1}$ a
 simplest arithmetics generators. Moreover a has been connected [3] to the canonical $e^{1/e}$ and the
 5th optimal musical scale with 306 notes. This opens a new research in pure mathematics.
 
-
 \subsection{The sporadic Groups}
 
 The above main term $2a^{2} = m_{e} c^{2}/E_{Ryd}$ is
@@ -772,7 +770,12 @@ F/af \approx 496\approx j^{\delta}
 Also, to 8 ppm: $lnO_{M} /2lnlnlnlnO_{M} \approx 137$, and the product of the 20 groups of the happy family tied
 to the Monster shows, to 0.015\%, 1\% and 0.9 \%:
 
-$$\Pi_{happy} \approx \delta \times a^{a} \approx j^{j^{\pi/3}} \approx (j/496)^2 \Gamma^{210}$$. 
+$$\Pi_{happy} \approx \delta \times a^{a} \approx j^{j^{\pi/3}} \approx (j/496)^2 \Gamma^{210}$$.
+
+This confirms the above Compelte Holic Principle, and the computation basis role of is moreover confirmed by, to 2\%: $a^a \approx \Gamma^{209}, and the order of the Baby-Monster $O_B\approx\Gamma^{24}. Now, from $137 = 17 + 3\times 24$:
+\begin{equation}
+O_B \approx (a/\Gamma)^{a/3}
+\end{equation}
 
 \section{Fine-tuning with basic mathematical constants}
 \markright{Your Full Names.  Short Title of Your Paper}
