--- a/main.tex
+++ b/main.tex
@@ -770,9 +770,9 @@ F/af \approx 496\approx j^{\delta}
 Also, to 8 ppm: $lnO_{M} /2lnlnlnlnO_{M} \approx 137$, and the product of the 20 groups of the happy family tied
 to the Monster shows, to 0.015\%, 1\% and 0.9 \%:
 
-$$\Pi_{happy} \approx \delta \times a^{a} \approx j^{j^{\pi/3}} \approx (j/496)^2 \Gamma^{210}$$.
+$$\Pi_{happy} \approx \delta \times a^{a} \approx j^{j^{\pi/3}} \approx (j/496)^2 \Gamma^{210}$$
 
-This confirms the above Compelte Holic Principle, and the computation basis role of is moreover confirmed by, to 2\%: $a^a \approx \Gamma^{209}, and the order of the Baby-Monster $O_B\approx\Gamma^{24}. Now, from $137 = 17 + 3\times 24$:
+This confirms the above Compelte Holic Principle, and the computation basis role of is moreover confirmed by, to 2\%: $a^a$ \approx \Gamma^{209}, and the order of the Baby-Monster $O_B\approx\Gamma^{24}$. Now, from $137 = 17 + 3\times 24$:
 \begin{equation}
 O_B \approx (a/\Gamma)^{a/3}
 \end{equation}
