--- a/main.tex
+++ b/main.tex
@@ -1083,11 +1083,10 @@ Biology.
 
 
 \section*{Acknowledgements}
-The authors salute the memory of Sir Michael Atiyah for this message to the
-first author; `While I appreciate your efforts in physics, please do not use my name in any way
-other than referencing a published paper`. We salute his modesty, but his introduction of the rather
+The authors salute the memory of Sir Michael Atiyah for his encourragements to the
+first author:`I appreciate your efforts in physics'. His introduction of the rather
 unexpected Euler-Mascheroni constant in the fine-tuning research has considerably helped our task
-of proving the existence of a fundamental theory.
+of proving the existence of a fundamental theory. We also thank a private communication by Joel Sternheimer about its scale factor, we called $j$ in his honor.
 %
 \begin{flushright}\footnotesize
 Submitted on April 1st, 2019 / Accepted on April 6th, 2019
