--- a/main.tex
+++ b/main.tex
@@ -949,6 +949,7 @@ There is presently an intense debate in physics community. Only a minority belie
 Final Theory, while a large majority have abandoned hope and believes seriously in the extreme
 consequence of the `Anthropic Principle`, the Multiverse conundrum. The present article settles the
 debate in favor of a single steady-state cosmos.
+
 This article confirms direct connexions [3] between physical and biological parameters. So,
 while the `Anthropic Principle` states that Life implies a favored Cosmos among a Multiverse, the
 `Inverse Anthropic Principle` [3] is more logical, stating that an all-deterministic single Cosmos
@@ -958,6 +959,7 @@ this article is that the Cosmos is like a computer. A common point with the brai
 character, experienced in musical sensation. So, intelligent life must be universal. The famous Fermi
 question `where are they?`, is not a paradox, since any abnormal observation is a-priori rejected by a
 dogmatic community.
+
 Another type of separation exists, but with not any debate: only a small minority thinks Physics
 and Mathematics are unified, while a large majority separates the two domains (so separating also
 Biology). The present article shows that the former are right: physical constants are mathematical
@@ -967,6 +969,7 @@ Grandcosmos is like a computer which uses optimal physico-mathematical dimension
 calculation basis and that they are present in DNA characteristics [3]. The present article show
 definitely the liaisons with $\pi$, e and $\gamma$, and rehabilitates String theories, also abandoned by a
 majority [27].
+
 There is also the Determinism separation, a majority believing seriously that `God plays dices`,
 in contradiction with our Cosmic Computing Principle. The c-free analysis gives simply and
 directly the Large time periodicity of an all-deterministic Grandcosmos, as it gives in an elementary
@@ -976,15 +979,17 @@ This is tied to the application of the exclusion principle that Eddington dared 
 cosmology. For this reason he was declared `crakpot` and his theory discarded by a majority.
 Fortunately, the large theoretical advance of Eddington is now recognized [28][29], but without
 mentioning a crucial point: he predicted the tau fermion with a right order of mass, 30 years before its surprising discovery, calling it Heavy Mesotron [1].
+
 The same rejection seems to apply now to Atiyah's last work. The present article shows that at
 least a part of it is very pertinent.
+
 It seems that the pre-scientific role of chance is a common point between three misleading views
 in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's argumentation
 with a scientific theory. Secondly, in quantum physics, the so-called `incertainty principles`, which are
 only manifestations of the general wave propagation (Field and flickering Matter), through Fourier
 transform properties. Thirdly, in cosmology, the recurse to the Multiverse conundrum.
 
-The pertinence of such a simple polynomial cannot be admitted by the standard community, for instance arguing that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the realorigin of everything. It is strange that this term \textit{immergence} is a neologism. 
+The pertinence of such a simple polynomial relations cannot be admitted by the standard community, for instance arguing that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the realorigin of everything. It is strange that this term \textit{immergence} is a neologism. 
 
 
 \section {Conclusions Simplicity at work}
@@ -997,6 +1002,7 @@ spatial homogeneity. The Relativity theory, unable to define an inertial frame, 
 not apply in Cosmology at large: the Absolute Space is reestablished, realized by the Microwave
 Cosmic Background, which identifies with the Grandcosmos Frame, while Kotov period is a quasi-
 absolute clock, ruled by the tachyonic celerity.
+
 The simplest topological equations, the equality between dimensionless topological varieties,
 circumference, area, 3D volume... appear to apply in cosmology, which is, for many, the hardiest
 chapter of physics. This modern, negative, opinion is in fact contrary to the ancient culture, for
@@ -1006,19 +1012,23 @@ Even the degenerate form of topological or holographic relations, the simplest d
 equations, the Holic Principle, shows direct pertinence. In particular it emphatizes the 30
 dimensions, which appear decisive in the Topological Axis, and identifies with the sum of 26 string
 dimensions and 4 of space-time.
+
 The standard Holographic Principle must be generalized to wavelengths others than the Planck
 length, in particular the Topon, the visible Universe wavelength in 1D holography, which breaks
 another taboo of current thinking: the Planck wall, by an enormous factor, about $10^{61}$ , resolving the
-vacuum energy dilemma factor $10^{122}$ .
+vacuum energy dilemma factor $10^{122}$.
+
 The high precision (until ppb) prove that the traditional scientific thinking is not at all baffled by
 the physical parameter values, meaning they are mere mathematical constants. In this respect, the
 high precision in the measurement of the Fermi constant, Muon mass, background temperature and
 Kotov cosmic period must be saluted as decisive achievements.
+
 The simplest method of looking for simple monomial expressions involving mathematical
 constants leads to ppb correlations, confirming Cosmos Unicity. As Atiyah wrote [24]: `Nobody has
 ever wondered what the Universe would be if $\pi$ were not equal to 3.14159.... Similarly no one
 should be worried what the Universe would be if a were not 137.035999...` This is a definite
 refutation of the Multiverse Hypothesis.
+
 The present article confirms also the Topological Axis, which was obtained by the simplest
 visualizing method to represent in a single figure the characteristic lengths in macro and micro-
 physics, taking the electron wavelength as unity. The pertinence of the Topological Axis confirms
@@ -1026,16 +1036,19 @@ the importance of the Electron wavy propagation. This rehabilitates the String t
 tachyonic bosonic version, since the canonical dimension 26 appears to characterizes the observable
 universe radius R. This confirms that c is not a cosmic pertinent speed, as is clearly shown both by
 logic (it is far too slow) and quantum non-locality.
+
 Moreover, by excluding c in the simplest tool of elementary physics, prospective dimensional
 analysis, this gives immediately a very good approximation of both R/2, the cosmic temperatureand the cosmic overall periodicity, which connects with the holic dimension n = 30 in the
 Topological Axis, whose apparent asymmetry suggests directly the existence of a Grandcosmos.
 While it is claimed that String Theory do not connect with experiment, the Cartan-Bott periodicity
 appears, showing the gauge bosons, so confirming the Standard Model of Particle Physics, but with
 massive gluon, which is independently seriously considered [31].
+
 This means also that the International System must go back to only three fundamental unities,
 Mass, Length and Time. The distinction between Length and Time must be emphasized, as
-Poincare, the father of 4D Relativity Theory recommended. Indeed their confusion, by writing c =
+Poincare, the father of 4D Relativity Theory recommended. Indeed their confusion, by writing $c$ =
 1, impeded the fact that the Hubble-Lemaitre radius R is a trivial length.
+
 The simplest model, the gravitational Hydrogen molecule gives R, explaining the 2 factor and
 justifying the elimination of c, as in the Bohr model. This corresponds to a Hubble constant 70.790
 (km/s)/Megaparsec, consistent with the recent measurement [4]: 72(3) Megaparsec/(km/s), which
@@ -1044,16 +1057,20 @@ The simplest statistical theory of Eddington gave another justification to R. Al
 simple and elegant is the Large Eddington number, giving correctly the number of neutrons in the
 trivial fraction 3M/10 of the observable universe. This is probably the most dramatic prediction in
 all scientific history.
-The simplest proof of the computation basis character of the electrical parameter a is provided
-by the multiple appearance of the terms $e^{a}$ and $a^{a}$ .
+
+The simplest proof of the computation basis character of the electrical parameter $a$ is provided
+by the multiple appearance of the terms $e^{a}$ and $a^{a}$.
+
 Now, the deep significance of a number of dimensions is the number of independent variables,
 which is a fundamental invariant, whatever the theory [32]. So, it is logical to introduce the
 hypothesis that 26 physical parameters are defined by the 26 sporadic cardinal orders. Since
 Sporadic Groups are associated with octonion algebra [33], this rejoins a prediction of Atiyah's last
 work, the essential role of octonion algebra in the final theory [24].
+
 The ancestral problem of the stability of the solar system must be revisited, taking into account
 seriously a cosmic influence, characterized by the Kotov's period and length. Also the Pioneer, Tifft
 and Arp effects must be seriously considered, guided by the flickering Time-Length-Mass concept.
+
 This answers several main problems : 
 \begin{itemize}
 \item 1/ Unification Gravitation-Quantum Physics, by
@@ -1066,16 +1083,20 @@ cosmology is the basis of United Science,
 they are optimal basis of computation tied with the Holographic Principle and its arithmetic form,
 the Holic Principle, 
 \item 5/ The so-called Dark energy proportion 0.7, which is a false problem, since
-3/10 is the trivial ratio between gravitational and critical energy. 6. The introduction of the Topon
+3/10 is the trivial ratio between gravitational and critical energy. 
+\item 6/. The introduction of the Topon
 justifies the $10^{122}$ gap between vacuum energy and the visible universe one.
 The multiple connexions with the DNA chain seems to imply it is a 1D hologram. This seems to
 be confirmed by recent studies [30].
+
 The very large infra-red telescopes in preparation will show in the very far field old galaxies
 instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will
 not save the already refuted standard evolutionary model.
+
 In short, the rediscovered cosmos unifies the two main modern cosmologies in a rapid matter-
 antimatter oscillatory bounce. The Cosmos appear as simple, unique, permanent, computational,
 deterministic, trans-planckian, cyclic, topological and inverse-anthropic.
+
 It is now clear that present mathematics are incomplete, and this Coherent Cosmology
 announces a reunification of Philosophy, Mathematics, Physics, Chemistry, Informatics and
 Biology.
