--- a/main.tex
+++ b/main.tex
@@ -1088,16 +1088,13 @@ the Holic Principle,
 justifies the $10^{122}$ gap between vacuum energy and the visible universe one.
 The multiple connexions with the DNA chain seems to imply it is a 1D hologram. This seems to
 be confirmed by recent studies [30].
-
-The very large infra-red telescopes in preparation will show in the very far field old galaxies
+\item 7/.The very large infra-red telescopes in preparation will show in the very far field old galaxies
 instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will
 not save the already refuted standard evolutionary model.
-
-In short, the rediscovered cosmos unifies the two main modern cosmologies in a rapid matter-
+\item 8/In short, the rediscovered cosmos unifies the two main modern cosmologies in a rapid matter-
 antimatter oscillatory bounce. The Cosmos appear as simple, unique, permanent, computational,
 deterministic, trans-planckian, cyclic, topological and inverse-anthropic.
-
-It is now clear that present mathematics are incomplete, and this Coherent Cosmology
+\item 9/It is now clear that present mathematics are incomplete, and this Coherent Cosmology
 announces a reunification of Philosophy, Mathematics, Physics, Chemistry, Informatics and
 Biology.
 \end{itemize}
