--- a/main.tex
+++ b/main.tex
@@ -1071,7 +1071,7 @@ The ancestral problem of the stability of the solar system must be revisited, ta
 seriously a cosmic influence, characterized by the Kotov's period and length. Also the Pioneer, Tifft
 and Arp effects must be seriously considered, guided by the flickering Time-Length-Mass concept.
 
-This answers several main problems : 
+This article answers several main problems, and makes some predictions: 
 \begin{itemize}
 \item 1/ Unification Gravitation-Quantum Physics, by
 rehabilitating the forgotten Eddington's statistical theory, 
