--- a/main.tex
+++ b/main.tex
@@ -715,9 +715,9 @@ a = (H/p)((ln(R_1/\lambdabar_e) + \gamma – 1)/(\pi^2/6 - 1)) \approx ln(R/\lam
 \end{equation}
 so confirming the $R$ value to 45 ppm, a correction which is $\beta p/p_0$, within 0.2\%.
 
-Moreover, this confirms the central role of the Sternheimer scale factor $j = 8\pi^2/ln2$ (to 0.013 \% and 0.046 \%):
+Moreover, this confirms the central role of the Sternheimer scale factor $j = 8\pi^2/ln2$ (to 0.013 \%, 0.013 \% and 0.046 \%):
 \begin{equation}
-j \approx a - e^{\pi} \approx e^{\pi} lna
+j \approx ln(R/\lambdabar e) + \Gamma \approx a - e^{\pi} \approx e^{\pi} lna
 \end{equation}
 It was noted [3] that $j\approx T_mam/T_CMB$, the ratio between mammal and cosmic teperatures, and that $sqrt{Rl_P}$ is close (1\%) to the mammal wavelength $hc/kT_mam$. So, \textit{the couple temal photon-Life is at the upper center of the Topological Axis}, while the down center is  the Higgs boson (Fig.1). The real center, as seen above, is the dimension n = 16. Moreover,$sqrt{R^{\prime}l_P}$ is close (0.1\%) to the water triple point, which is also the product of triple points of Hydrogen and Oxygen, divided by the cosmic temperature. This shows that Chemistry is also involved.
 
