--- a/main.tex
+++ b/main.tex
@@ -711,7 +711,7 @@ relations would be only Fourier transform manifestations of Wave Mechanics.
 \subsection{Atiyah and Sternheimer constants}
     Sir Michael Atiyah was a precurseur in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $\Gamma = gamma a /\pi$, as a simplification term [22]. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 2.3.1) single-electron cosmical formula (0.3 ppm):    
 \begin{equation}
-a = (H/p)((ln(R_1/\lambdabar_e) + \gamma – 1)/(\pi^2/6 - 1)) \approx ln(R/\lambdabar e) + \Gamma + e^{\pi}
+a = (p/H)((ln(R_1/\lambdabar_e) + \gamma – 1)/(\pi^2/6 - 1)) \approx ln(R/\lambdabar e) + \Gamma + e^{\pi}
 \end{equation}
 so confirming the $R$ value to 45 ppm, a correction which is $\beta p/p_0$, within 0.2\%.
 
@@ -719,7 +719,9 @@ Moreover, this confirms the central role of the Sternheimer scale factor $j = 8\
 \begin{equation}
 j \approx ln(R/\lambdabar e) + \Gamma \approx a - e^{\pi} \approx e^{\pi} lna
 \end{equation}
-It was noted [3] that $j\approx T_mam/T_CMB$, the ratio between mammal and cosmic teperatures, and that $sqrt{Rl_P}$ is close (1\%) to the mammal wavelength $hc/kT_mam$. So, \textit{the couple temal photon-Life is at the upper center of the Topological Axis}, while the down center is  the Higgs boson (Fig.1). The real center, as seen above, is the dimension n = 16. Moreover,$sqrt{R^{\prime}l_P}$ is close (0.1\%) to the water triple point, which is also the product of triple points of Hydrogen and Oxygen, divided by the cosmic temperature. This shows that Chemistry is also involved.
+It was noted [3] that $j\approx T_mam/T_CMB$, the ratio between mammal and cosmic teperatures, and that $sqrt{Rl_P}$ is close (1\%) to the mammal wavelength $hc/kT_mam$. So, \textit{the couple temal photon-Life is at the upper center of the Topological Axis}, while the down center is the Higgs boson (Fig.1). The real center, as seen above, is the dimension n = 16. Moreover,$sqrt{R^{\prime}l_P}$ is close (0.1\%) to the water triple point, which is also the product of triple points of Hydrogen and Oxygen, divided by the cosmic temperature. This shows that Chemistry is also involved
+
+Now, the study of the 22 amino-acids [3] has shown that $j$ is a computation basis, to 2\%: $j^{22} \approx 3 P^2 $, and, more precisely, to 0.01 \% :$j^{22} \approx Pp_E^7 $, where $ p_E \approx 1847.599459$ is the Eddington's mass ratio of the couple proton-electron, the roots ratio in the Eddington's equation $10x^2 - 136x + 1 = 0 $ .
 
 
 \subsection{Ubiquity of $a^{a}$}
@@ -741,7 +743,7 @@ defining a to 0.3 ppm. So the number a establishes a connexion between $u_{1}$ a
 simplest arithmetics generators. Moreover a has been connected [3] to the canonical $e^{1/e}$ and the
 5th optimal musical scale with 306 notes. This opens a new research in pure mathematics.
 
-\subsection{The sporadic Groups}
+\subsection{The Sporadic Groups}
 
 The above main term $2a^{2} = m_{e} c^{2}/E_{Ryd}$ is
 tied to the Rydbergh energy's principal value $E_{Ryd}$ whose ratio with the Planck energy is closely
