--- a/main.tex
+++ b/main.tex
@@ -726,22 +726,22 @@ Now, the study of the 22 amino-acids [3] has shown that $j$ is a computation bas
 
 \subsection{Ubiquity of $a^{a}$}
 
-From the Compitation Hypothesis, $a$ must be an optimal basis. Now, as seen above 137 is a number of parameters, so can be interpreted as a dimension, so, according to the Holic Principle , it must be also a privilegied exponent. So the term cmust be central.
+From the Compitation Hypothesis, $a$ must be an optimal basis. Now, as seen above 137 is a number of parameters, so can be interpreted as a dimension, so, according to the Holic Principle , it must be also a privilegied exponent. So the term $a^a$ must be central.
     
 Indeed, $a^a$ is, apart a $\pi$ factor, the Grandcosmos volume with unit length the Hydrogen radius. Moreover, the dramatic relation $a^a\approx e^{p/e}$ has been connected with the fifth optimal musical scale and to the operational definition of e [3]. Now, it is here looked for its manifestations in classical mathematics. 
 
 The famous Lucas-Lehmer primality test uses the series of whole numbers $N_{n+1} = N_{n}^{2}-2$,
-starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging to the Diophantine generators $u_{n} = \sqrt{n} + \sqrt{(n+1)}$., whose entire powers are close to whole numbers. One shows that $N_{n} \approx u_{3}^{(2^{q})}$, and for q = 9:
+starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging to the Diophantine generators $u_{n} = \sqrt{n} + \sqrt{(n+1)}$., whose entire powers are close to whole numbers. One shows that $N_{n} \approx u_{3}^{(2^{n})}$, and for n = 9:
 \begin{equation}
-u_{3}^{2^9} \approx (2(a^{2} + 2\sqrt{\mu}))^{64} \approx a^{a}
+u_{3}^{2^9} \approx (2(137^{2} + 48))^{64} \approx a^{a}
 \end{equation}
-defining a to 39 ppm, where $\mu$ is the mass ratio muon/electron 
+defining $a$ to 39 ppm and showing that the Rydbergh term $2a^2$ plays a central role, see the following sub-section.
 
 Also, with the Pell-Fermat generator $u_{1} = 1 + \sqrt{2}$:
 $a^{a} \approx u 1^(3\times(2^{8}-1))$
-defining a to 0.3 ppm. So the number a establishes a connexion between $u_{1}$ and $u_{3}$ , two of the
-simplest arithmetics generators. Moreover a has been connected [3] to the canonical $e^{1/e}$ and the
-5th optimal musical scale with 306 notes. This opens a new research in pure mathematics.
+defining $a$ to 0.3 ppm. So the number $a$ establishes a connexion between $u_{1}$ and $u_{3}$, two of the
+simplest arithmetics generators. Moreover $a$ has been connected [3] to the canonical $e^{1/e}$ and the
+5th optimal musical scale with 306 notes [3]. This opens a \textit{new research in pure mathematics}.
 
 \subsection{The Sporadic Groups}
 
@@ -757,13 +757,13 @@ Moreover the above term appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm:
 
 $$e^{137e}\approx (e/3)e^{ea}\approx O_M^3 \approx 496^{60} \approx fe^{16e^\pi} \approx f^{4d137/\pi}$$
 
-implying the Green-Schwarz string dimension 496, which is the third perfect number, after 6 and 28, and tied to the Higgs boson in the Topological Axis (Fig.1). The Bizouard constant, precizing the inverse of the standard 'strong coupling constant 0.1184(7), $f = a_w/2\pi(pH)^{3/2} \approx 8.43450$ appars as a computation basis, and the above relation implies, to 6+1 ppm:
+implying the Green-Schwarz string dimension 496, which is the third perfect number, after 6 and 28, and tied to the Higgs boson in the Topological Axis (Fig.1). The Bizouard constant, precizing the inverse of the standard 'strong coupling constant 0.1184(7), $f = a_w/2\pi(pH)^{3/2} \approx 8.43450$ appars as a computation basis, and the above relation implies, to 61 ppm:
 \begin{equation}
 lnf\approx \pi e/4d_e
 \end{equation}
 
 One is struck by the following combination of the three dimensionless parameters, the electrical
-one $a$, the Fermi ratio $F =\sqrt{a_{w}}$ and the Bizouard strong ratio $f \approx 8.4345$:
+one $a$, the Fermi ratio $F =\sqrt{a_{w}}$ and the strong ratio $f$, 0.05 \% and 0.13 \%:
 \begin{equation}
 F/af \approx 496\approx j^{\delta}
 \end{equation}
@@ -774,34 +774,68 @@ to the Monster shows, to 0.015\%, 1\% and 0.9 \%:
 
 $$\Pi_{happy} \approx \delta \times a^{a} \approx j^{j^{\pi/3}} \approx (j/496)^2 \Gamma^{210}$$
 
-This confirms the above Compelte Holic Principle, and the computation basis role of is moreover confirmed by, to 2\%: $a^a \approx \Gamma^{209}$, and the order of the Baby-Monster $O_B\approx\Gamma^{24}$. Now, from $137 = 17 + 3\times 24$:
+This confirms the above Complete Holic Principle, and the computation basis role of $Gamma$ is moreover confirmed by, to 2\%: $a^a \approx \Gamma^{209}$, and the order of the Baby-Monster $O_B\approx\Gamma^{24}$. Now, from $137 = 17 + 3\times 24$:
 \begin{equation}
 O_B \approx (a/\Gamma)^{a/3}
 \end{equation}
 
+where $a/Gamma = \pi/\gamma $ is the canonical Atiyah ratio.
+
+
+Note that $j/496 ≈ 0.229$ is close to the weak mixing angle, but $p/g_0 ≈ 0.232$ is closer to the measured value [10], where $g_0 = 7920 $ is the smallest Matthieu sporadic group order. These ratios appears as calculation basis in the product of cardinal orders of the Monster and the baby-Monster groups, to 1\%, 0.2 \%, 1 \% and 0.1\%:
+
+$$O_MO_B\approx H^{2H/a} /approx (g_0/p)^a \approx (496/j)^137 \approx  n_{ph}/d^{1/2} $$
+
+where $n_{ph}\approx (3/\pi) exp(e^6/2)$ (to 0.2 \%) is the photon number in the visible universe. So 496, $p$ and $g0$ are also privileged computations basis. 
+
+From the above relation, by taking the $137^th$ root, one obtains, to 0.03 \%: $$496/j  ≈ (ae^e/\Gamma)1/3$$.
+
+
 \section{Fine-tuning with basic mathematical constants}
 \markright{Your Full Names.  Short Title of Your Paper}
 Since some dimensionless physical parameters are very precisely measured, it seems obvious to look for
-relations with mathematical constants different from the optimal basis e, such as $\pi$ and $\gamma \approx
+relations with mathematical constants such as $e$, $\pi$ and $\gamma \approx
 0.577215665$, the Euler-Mascheroni constant, which appears already in the above single-electron
 cosmic radius and the Topological Axis.
 
+\subsection {The Euler constant e confirmed as the optimal calculation basis}
+    The Topological Axis shows clearly that the Grandcosmos is defined by the following conjunction (1\%):
+
+
+
+
+The supplementary term $exp(e^2)$ being close to $a^{3/}. Note that the 'economic number' $E = exp(ee)\approx j^6/F$ (0.0\%), and that $e^2$ is the limmit of the following musical series:
+
+$$(3/2)^5 \approx (4/3)^7   \approx (5/4)^9  \approx  (6/5)^{11}  \approx   ...  \approx  (1+1/n)^{2n+1}  $$  
+
+a series converging very much rapidly than the classical Euler's one $(1+1/n)^n$. The first two terms defines the occidental 12 tones scale.
+
+
 \subsection {Wyler's approach}
 
-Armand Wyler singularized a value $a_{W}$ approaching a to 0.6 ppm and confirmed the pertinence
-of the Lenz approximation which plays a central role above: $p_{0} = 6\pi^{5}$ approaching p to 18.824 ppm.
+
+Armand Wyler singularized a value approaching $a$ to 0.6 ppm and confirmed the pertinence
+of the Lenz approximation which plays a central role above: $p_{0} = 6\pi^{5}$ approaching $p$ to 18.824 ppm.
+
 A confirmation of a symmetry between a and 137 is the following relation involving H, the
 Hydrogen electron mass ratio, precise to 83 ppb:
 $$a/137 \approx (6\pi^{5} H)^{1/2} /p$$
 One observe that the rejection of Wyler's work, due to a non-perfect formula for the p and a values, is a new
 manifestation of the general neglectance of the Hierarchical Principle.
 
+
+A confirmation of a symmetry between $a$ and 137 is the two following approximations for $p$ with the same imprecision 80 ppb, so leading to the ppb relation:
+
+ $$p \approx (137/a) (p_0 H)^{1/2}  \approx EH^3/d_e^2jFD  
+
+where $D = 196883$ is the Moonshine Monster dimension [23], which appears also, to $10^{-7}$, to be $(\pi_p P/d_eF)^{1/2}/H$, with $\pi_p = (p/6)^{1/5}, so confirming again the pertinence of Wyler's approach. Note that its rejection, due to a non-perfect formula for the $p$ and $a$ values, is a new manifestation of the general neglect of the Hierarchy Principle.
+
+Note that the Lenz-Wyler formula is nothing but the product of the area by the volume of a cube with side $\pi$. If one consider a cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137² + 19$. This is no hazard, since this relation was long deduced from basic considerations on quarks [3]. Indeed with $u = 5$ and $d =  6$, the combination $uud = 150$, whose power 3/2 is close to $H$, while the combination $udd \approx (n/a)^2$, with $n$ the neutron-electron mass ratio. This leads to $6\times 5^5 \approx (aH/n)^2 $, to 0.012 \%. 
+
 \subsection {The Archimedes constant $\pi$ as a calculation basis}
 
-The above Lenz-Wyler formula has a geometrical interpretation: $6\pi^{5}$ is the product area-
-volume of a square of radius $\pi$. Now, the value f{26} of the Topological Function for the String
-main dimension 26 renders, to 0.1\%, the same form $f{26} \approx 6(2\pi^{2} a^{3} )^{5}$ , where $2\pi^{2}a^{3}$ is the area of a
-4-sphere of radius a. Moreover, with n/p the mass ratio Neutron/Proton, to 0/3\%, 0.02\% and 1
+The value of the Topological Function for the String
+main dimension 26 renders, to 0.1\%, the same Lenz-Wyler form $f{26} \approx 6(2\pi^{2} a^{3} )^{5}$ , where $2\pi^{2}a^{3}$ is the area of a 4-sphere of radius $a$. Moreover, with $n/p$ the mass ratio Neutron/Proton, to 0/3\%, 0.02\% and 1
 ppm:
 $$(p/n) (R/\lambdabar_{e})^{2} \approx (f{26}/6)^{2} \approx (2\pi^{2} a^{3})^{10} \approx \pi^{155}$$
 The corresponding value of $\pi$ in the last expression shows the fractional series 3, 7, 16, -u, with $u \approx
